[tool.poetry]
name = "houndigrade"
version = "1.0.0"
description = ""
authors = ["Cloudigrade Dev Team <doppler-dev@redhat.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
"boto3" = "*"
jsonpickle = "*"
sh = "^1.13.1"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
nose = "*"
coverage = "*"
black = {version = "*", allow-prereleases = true}
flake8-black = "*"
flake8-import-order = "*"
flake8-docstrings = "*"
pydocstyle = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
